Archive previous tagged versions of utilities.
Former-commit-id: 20a41c848048f4e3cdf835bb0b2773f66cff2841

--- a/utilities/apxdx/Makefile
+++ b/utilities/apxdx/Makefile
@@ -1,5 +1,5 @@
 apxdx:
-	ncepxlf -O3 -o apxdx apxdx.f -L/nwprod/lib -lbufr_4_64
+	ifort -O2 -o apxdx apxdx.f -L/nwprod/lib -lbufr_4_64
 
 clean:
 	rm -f apxdx
