--- a/utilities/debufr/Makefile
+++ b/utilities/debufr/Makefile
@@ -1,6 +1,6 @@
 debufr:
-	ncepxlc -O3 -c cdebufr.c
-	ncepxlf -O3 -o debufr fdebufr.f cdebufr.o -L/nwprod/lib -lbufr_s_64
+	icc -O3 -DUNDERSCORE -c cdebufr.c
+	ifort -O3 -nofor-main -mcmodel=medium -shared-intel -o debufr fdebufr.f cdebufr.o -L/nwprod/lib -lbufr_v10.2.0_s_64
 
 clean:
 	rm -f *.o debufr
