Archive previous tagged versions of utilities.
Former-commit-id: 5aafa24908c1e8585013955806d8d06542f4b8af

--- a/utilities/debufr/Makefile
+++ b/utilities/debufr/Makefile
@@ -1,6 +1,13 @@
-debufr:
-	icc -O3 -DUNDERSCORE -c cdebufr.c
-	ifort -O3 -nofor-main -mcmodel=medium -shared-intel -o debufr fdebufr.f cdebufr.o -L/nwprod/lib -lbufr_v10.2.0_s_64
+CSRC	= cdebufr.c
+
+FSRC	= shtbinfo.f fdebufr.f openbt.f
+
+debufr:		$(CSRC) $(FSRC)
+	icc -O3 -mcmodel=medium -shared-intel -DUNDERSCORE -c $(CSRC)
+	ifort -O3 -nofor-main -mcmodel=medium -shared-intel -o debufr $(FSRC) cdebufr.o -L/nwprod/lib -lbufr_s_64
 
 clean:
-	rm -f *.o debufr
+	rm -f *.o *.mod
+
+realclean:	clean
+	rm -f debufr
