Update debufr to print code/flag meanings.
Former-commit-id: 5ad7d093bad9953bb39354df570aa02b49448580

--- a/utilities/debufr/sorc/Makefile
+++ b/utilities/debufr/sorc/Makefile
@@ -3,8 +3,9 @@ CSRC	= cdebufr.c prtusage.c
 FSRC	= shtbinfo.f fdebufr.f openbt.f
 
 debufr:		$(CSRC) $(FSRC)
-	icc -O3 -DUNDERSCORE -c $(CSRC)
-	ifort -O3 -nofor-main -o debufr $(FSRC) *.o $(BUFR_LIB4_DA)
+	icc -g -traceback -O3 -DUNDERSCORE -c $(CSRC)
+	ifort -g -traceback -O3 -nofor-main -o debufr $(FSRC) *.o /meso/save/Jeff.Ator/bufrlib/NCEPLIBS-bufr/libbufr_v11.3.0_4_64_DA.a
+#	ifort -O3 -nofor-main -o debufr $(FSRC) *.o $(BUFR_LIB4_DA)
 
 install:
 	mv debufr ../exec
