--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,14 @@
 SHELL=/bin/sh
 
 # sources, headers, objects, library and etc.
-SRCS_Ff = $(patsubst %.F, %.f, $(wildcard *.F))
-SRCS_f  = $(wildcard modv_*.f) $(wildcard moda_*.f) \
-          $(filter-out mod[av]_*.f, $(wildcard *.f))
+SRCS_F  = $(wildcard modv_*.F) $(wildcard moda_*.F)
+SRCS_f  = $(wildcard *.f)
 SRCS_C  = $(wildcard *.c)
 DEPS    = $(wildcard *.h)
 OBJS    = $(patsubst %.c, %.o, $(SRCS_C)) \
+          $(patsubst %.F, %.o, $(SRCS_F)) \
           $(patsubst %.f, %.o, $(SRCS_f))
-OBJS_Ff = $(patsubst %.f, %.o, $(SRCS_Ff))
 MODS    = $(wildcard *.mod)
-BUFRLIB = bufrlib
 
 all: build
 
@@ -25,13 +23,11 @@ dbg_build: override CFLAGS += $(DEBUG)
 dbg_build: override FFLAGS += $(DEBUG)
 dbg_build: $(LIB)
 
-preproc: $(SRCS_Ff)
-
 %.o: %.c
 	$(CC) -c $(CFLAGS) $(CFLAGSDEFS) $<
 
 %.o: %.F
-	$(FC) -c $(FFLAGS) $(FFLAGSDEFS) $<
+	$(FC) -c $(FPPCPP) $(FFLAGS) $(FFLAGSDEFS) $<
 
 %.o: %.f
 	$(FC) -c $(FFLAGS) $(FFLAGSDEFS) $<
@@ -52,14 +48,11 @@ install:
 test:
 	@echo "*** unit test unavailable currently ***"
 
-cleancpp:
-	$(RM) $(SRCS_Ff) $(OBJS_Ff) $(BUFRLIB).prm
-
 clean:
 	$(RM) $(OBJS) $(MODS) $(LIB)
 
 .SUFFIXES: .c .h .F .f .mod .o
 
 # Specify targets that do not generate filesystem objects
-.PHONY: all build preproc install debug dbg_build message test clean cleancpp
+.PHONY: all build install debug dbg_build message test clean
 
