modifications for macOS clang/gfortran build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
   message("setting intel true")
   set(IntelComp true )
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU*")
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU*" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang*")
   set(GNUComp true )
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "pgc*")
   set(PGIComp true )
@@ -47,10 +47,8 @@ if( (BUILD_RELEASE) OR (BUILD_PRODUCTION) )
     set(CMAKE_Fortran_8_FLAGS "-DUNDERSCORE -DDYNAMIC_ALLOCATION -DNFILES_H=32 -DMAXCD_H=250 -DMAXNC=600 -DMXNAF=3 -fdefault-integer-8 -fdefault-real-8 -O3 -funroll-loops -ggdb -Wall " CACHE INTERNAL "" )
     set(CMAKE_Fortran_4_FLAGS "-DUNDERSCORE -DDYNAMIC_ALLOCATION -DNFILES_H=32 -DMAXCD_H=250 -DMAXNC=600 -DMXNAF=3 -O3 -funroll-loops -ggdb -Wall" CACHE INTERNAL "" )
     option(GSIBUILD "Build only libs for GSI" ON)
-  elseif(PGIComp)
-    option(GSIBUILD "Build only libs for GSI" ON)
   else()
-    message("unkown compiler!")
+    message("unknown compiler!")
     exit()
   endif()
 endif()
