added DUNDERSCORE flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,14 +54,14 @@ set(definitions "UNDERSCORE" "NFILES=32" "MAXCD=250" "MAXNC=600" "MXNAF=3")
 set(c_DA_allocation_def "DYNAMIC_ALLOCATION")
 set(c_nonDA_allocation_def "STATIC_ALLOCATION")
 
-set(c_4_DA_flags)
+set(c_4_DA_flags "-DUNDERSCORE")
 set(c_8_DA_definitions "F77_INTSIZE_8")
-set(c_d_DA_flags)
+set(c_d_DA_flags "-DUNDERSCORE")
 set(fortran_4_DA_flags)
-set(c_4_flags "")
-set(c_8_flags "")
+set(c_4_flags  "-DUNDERSCORE")
+set(c_8_flags  "-DUNDERSCORE")
 set(c_8_definitions "F77_INTSIZE_8")
-set(c_d_flags "")
+set(c_d_flags "-DUNDERSCORE")
 set(fortran_4_flags)
 if(IntelComp)
       set(c_DA_allocation_def "DYNAMIC_ALLOCATION")
