--- a/cmake/PackageConfig.cmake.in
+++ b/cmake/PackageConfig.cmake.in
@@ -2,10 +2,16 @@
 
 #  * @PROJECT_NAME@::@PROJECT_NAME@_4 - real32 library target
 #  * @PROJECT_NAME@::@PROJECT_NAME@_8 - real64 library target
+#  * @PROJECT_NAME@::@PROJECT_NAME@_d - mixed library target
+#  * @PROJECT_NAME@::@PROJECT_NAME@_DA_4 - real32 library target with dynamic allocation
+#  * @PROJECT_NAME@::@PROJECT_NAME@_DA_8 - real64 library target with dynamic allocation
+#  * @PROJECT_NAME@::@PROJECT_NAME@_DA_d - mixed library target with dynamic allocation
+
 
 # Include targets file.  This will create IMPORTED target @PROJECT_NAME@
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
 
+# Get the build type from real32 library target
 get_target_property(@PROJECT_NAME@_BUILD_TYPES @PROJECT_NAME@::@PROJECT_NAME@_4 IMPORTED_CONFIGURATIONS)
 
 check_required_components("@PROJECT_NAME@")
