--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
   set(c_8_defs "F77_INTSIZE_8")
   set(c_8_DA_defs ${c_8_defs})
 
-  set(CMAKE_Fortran_FLAGS "-g -traceback -axCORE-AVX2")
+  set(CMAKE_Fortran_FLAGS "-g -traceback")
   set(CMAKE_Fortran_FLAGS_DEBUG "-O0")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
 
@@ -16,7 +16,7 @@ elseif(CMAKE_C_COMPILER_ID MATCHES "^(GNU|Clang|AppleClang)$")
 
   set(CMAKE_C_FLAGS_DEBUG "-ggdb -Wall -O0")
 
-  set(CMAKE_Fortran_FLAGS "-g -fbacktrace -funroll-loops -mavx2")
+  set(CMAKE_Fortran_FLAGS "-g -fbacktrace")
   set(CMAKE_Fortran_FLAGS_DEBUG "-ggdb -Wall -O0")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
 
@@ -25,7 +25,25 @@ elseif(CMAKE_C_COMPILER_ID MATCHES "^(GNU|Clang|AppleClang)$")
 
 endif()
 
-add_compile_definitions(UNDERSCORE)
+# Extract BUFRLIB parameters
+file(READ bufrlib.prm _bufrlib_prm_str)
+foreach(_var IN ITEMS MAXNC MXNAF)
+    if(_bufrlib_prm_str MATCHES "${_var} = ([0-9]+)")
+      list(APPEND c_defs ${_var}=${CMAKE_MATCH_1})
+    else()
+      message(FATAL_ERROR "Unable to parse variable ${_var} value from file: src/bufrlib.prm")
+    endif()
+endforeach()
+
+list(APPEND underscore_def UNDERSCORE)
+
+include(TestBigEndian)
+test_big_endian(IS_BIG_ENDIAN)
+if(IS_BIG_ENDIAN)
+  list(APPEND endian_def BIG_ENDIAN)
+else()
+  list(APPEND endian_def LITTLE_ENDIAN)
+endif()
 
 include("list_of_files.cmake")
 
@@ -51,12 +69,17 @@ foreach(kind ${kinds})
   add_library(${lib_name}_f STATIC OBJECT ${fortran_src})
   set_target_properties(${lib_name}_f PROPERTIES COMPILE_FLAGS
                                                  "${fortran_${kind}_flags}")
-  target_compile_definitions(${lib_name}_f PRIVATE "${allocation_def}")
+  target_compile_definitions(${lib_name}_f PUBLIC "${allocation_def}")
+  target_compile_definitions(${lib_name}_f PUBLIC "${underscore_def}")
+  target_compile_definitions(${lib_name}_f PRIVATE "${endian_def}")
 
   add_library(${lib_name}_c STATIC OBJECT ${c_src})
   set_target_properties(${lib_name}_c PROPERTIES COMPILE_FLAGS
                                                  "${c_${kind}_flags}")
-  target_compile_definitions(${lib_name}_c PRIVATE "${allocation_def}")
+  target_compile_definitions(${lib_name}_c PUBLIC "${allocation_def}")
+  target_compile_definitions(${lib_name}_c PUBLIC "${underscore_def}")
+  target_compile_definitions(${lib_name}_c PRIVATE "${endian_def}")
+  target_compile_definitions(${lib_name}_c PRIVATE "${c_defs}")
   target_compile_definitions(${lib_name}_c PRIVATE "${c_${kind}_defs}")
 
   set_target_properties(${lib_name}_f PROPERTIES Fortran_MODULE_DIRECTORY "${module_dir}")
@@ -69,8 +92,12 @@ foreach(kind ${kinds})
     $<BUILD_INTERFACE:${module_dir}>
     $<INSTALL_INTERFACE:include_${kind}>)
 
+  target_compile_definitions(${lib_name} PUBLIC "${underscore_def}")
+  target_compile_definitions(${lib_name} PUBLIC "${allocation_def}")
+
   list(APPEND LIB_TARGETS ${lib_name})
   install(DIRECTORY ${module_dir} DESTINATION ${CMAKE_INSTALL_PREFIX})
+  install(FILES ${c_hdr} DESTINATION ${CMAKE_INSTALL_PREFIX}/include_${kind})
 endforeach()
 
 install(
