add unit testing
Change-Id: Id74f6e9da78967d1c8261f0b6c35669a7fc1648b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,19 @@ endif()
 
 include(GNUInstallDirs)
 
+option(ENABLE_TESTS "Enable Tests" ON)
+
+# Determine the kinds upfront (both src/ and test/ need them).
+# Both GNU and Intel support DYNAMIC_ALLOCATION
+list(APPEND kinds "4_DA" "8_DA" "d_DA")
+# Only Intel supports STATIC_ALLOCATION
+if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
+  list(APPEND kinds "4" "8" "d")
+endif()
+
 add_subdirectory(src)
+
+if(ENABLE_TESTS)
+  enable_testing()
+  add_subdirectory(test)
+endif()
