--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -104,7 +104,7 @@ foreach(test_src ${test_OUT_1_srcs})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
     add_dependencies(${test_exe} bufr_${kind})
-    target_link_libraries(${test_exe} PUBLIC bufr_${kind})
+    target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
     bufr_add_test(${test} ${test_exe})
   endforeach()
 endforeach()
@@ -117,7 +117,7 @@ foreach(test_src ${test_OUT_2_srcs})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
     add_dependencies(${test_exe} bufr_${kind})
-    target_link_libraries(${test_exe} PUBLIC bufr_${kind})
+    target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
     bufr_add_test_preAPX(${test} ${test_exe})
   endforeach()
 endforeach()
@@ -131,7 +131,7 @@ endforeach()
 #      set(test_exe ${test}.x)
 #      add_executable(${test_exe} ${test_src})
 #      add_dependencies(${test_exe} bufr_${kind})
-#      target_link_libraries(${test_exe} PUBLIC bufr_${kind})
+#      target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
 #      bufr_add_test(${test} ${test_exe})
 #    endif()
 #  endforeach()
