--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ file(STRINGS "VERSION" pVersion)
 project(
     bufr
     VERSION ${pVersion}
-    LANGUAGES C Fortran)
+    LANGUAGES C CXX Fortran)
 
 if(NOT CMAKE_BUILD_TYPE MATCHES "^(Debug|Release|RelWithDebInfo|MinSizeRel)$")
   message(STATUS "Setting build type to 'Release' as none was specified.")
@@ -60,3 +60,4 @@ if(ENABLE_TESTS)
   enable_testing()
   add_subdirectory(test)
 endif()
+
