remove testfiles directory and make ENABLE_TESTS=OFF by default
Change-Id: I7d687cc8122f758fe919e97a27a52c362c12f90e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 
 include(GNUInstallDirs)
 
-option(ENABLE_TESTS "Enable Tests" ON)
+option(ENABLE_TESTS "Enable Tests" OFF)
 
 # Determine the kinds upfront (both src/ and test/ need them).
 # Both GNU and Intel support DYNAMIC_ALLOCATION
