was missing ALL in the get_test_data target

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,7 @@ else()
   endif()
 endif()
 
-add_custom_target(get_bufr_test_data DEPENDS ${BUFR_TAR})
+add_custom_target(get_bufr_test_data ALL DEPENDS ${BUFR_TAR})
 add_custom_command(
   TARGET get_bufr_test_data
   POST_BUILD
