--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -106,13 +106,23 @@ function(bufr_add_test_preAPX TESTNAME EXENAME)
            COMMAND ${CMAKE_BINARY_DIR}/bin/test_wrapper.sh ${EXENAME} "Y")
 endfunction()
 
+# Tests are only guarenteed to work for _4 libraries.
+# Both GNU and Intel support DYNAMIC_ALLOCATION
+list(APPEND test_kinds "4_DA")
+# Only Intel supports STATIC_ALLOCATION
+if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
+  list(APPEND test_kinds "4")
+endif()
+
 # IN tests
 foreach(test_src ${test_IN_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${kinds})
+  foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
+    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
+                                                 "${fortran_${kind}_flags}")
     add_dependencies(${test_exe} bufr_${kind})
     target_link_libraries(${test_exe} PUBLIC bufr::bufr_${kind})
     add_test(NAME ${test} COMMAND ${test_exe})
@@ -122,10 +132,12 @@ endforeach()
 # OUT_1 tests
 foreach(test_src ${test_OUT_1_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${kinds})
+  foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
+    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
+                                                 "${fortran_${kind}_flags}")
     add_dependencies(${test_exe} bufr_${kind})
     target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
     bufr_add_test(${test} ${test_exe})
@@ -135,27 +147,33 @@ endforeach()
 # OUT_2 tests
 foreach(test_src ${test_OUT_2_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${kinds})
+  foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
+    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
+                                                 "${fortran_${kind}_flags}")
     add_dependencies(${test_exe} bufr_${kind})
     target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
     bufr_add_test_preAPX(${test} ${test_exe})
   endforeach()
 endforeach()
 
-# OUT_3 tests only run with DA library
-#foreach(test_src ${test_OUT_3_srcs})
-#  string(REPLACE ".f" "" testPref ${test_src})
-#  foreach(kind ${kinds})
-#    if(${kind} MATCHES "^([4|8|d]_DA)$")
-#      set(test     ${testPref}_${kind})
-#      set(test_exe ${test}.x)
-#      add_executable(${test_exe} ${test_src})
-#      add_dependencies(${test_exe} bufr_${kind})
-#      target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
-#      bufr_add_test(${test} ${test_exe})
-#    endif()
-#  endforeach()
-#endforeach()
+# OUT_3 tests only run with DA library and Intel
+if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
+foreach(test_src ${test_OUT_3_srcs})
+  string(REPLACE ".f" "" testPref ${test_src})
+  foreach(kind ${test_kinds})
+    if(${kind} MATCHES "^([4|8|d]_DA)$")
+      set(test     ${testPref}_${kind})
+      set(test_exe ${test}.x)
+      add_executable(${test_exe} ${test_src})
+      set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
+                                                   "${fortran_${kind}_flags}")
+      add_dependencies(${test_exe} bufr_${kind})
+      target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
+      bufr_add_test(${test} ${test_exe})
+    endif()
+  endforeach()
+endforeach()
+endif()
